login page and table component

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.tableStyle{
+  width:'100%';
+  align-content:'space-between';
+  border-width:2;
+  padding:'10%';
+}
