--- a/src/screens/login/styles.css
+++ b/src/screens/login/styles.css
@@ -76,6 +76,7 @@
     height: 100vh;
     align-items: center;
     align-content: center;
+    padding: 20px;
 }
 
 @media screen and (max-width: 550px){
@@ -105,5 +106,7 @@
 }
 .imageStyle{
     width:100%;
-    height:100%
+    height:100%;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
