--- a/src/components/TableComponent/style.css
+++ b/src/components/TableComponent/style.css
@@ -11,9 +11,10 @@
     font-size: 16px;
     font-weight: bold;
     color: #5C6F88;
-    width: 15%;
+    width: 10vw;
     justify-content: center;
     font-family: "Roboto", sans-serif;
+    word-break: break-all;
 }
 
 .tableDataContainer {
@@ -28,7 +29,7 @@
     display: flex;
     font-size: 16px;
     color: #212529;
-    width: 15%;
+    width: 10vw;
     align-items: center;
     justify-content: center;
     margin: 10px;
@@ -88,11 +89,11 @@
 
 @media screen and (max-width: 695px) {
     .tableHeading {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .tableData {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .itemImageStyle {
