--- a/src/screens/Home/style.css
+++ b/src/screens/Home/style.css
@@ -1,5 +1,7 @@
-.image {
-    background: url('../../assets/images/inventory.jpg');
-    width: 100%;
-    height: 100vh;
+.baseContainer{
+    margin-top: 10px;
+}
+.buttonStyle{
+    background-color: red;
+    color: white;
 }
