--- a/src/screens/Home/style.css
+++ b/src/screens/Home/style.css
@@ -1,7 +1,91 @@
-.baseContainer{
-    margin-top: 10px;
+.baseContainerhome {
+    width: 100vw;
+    height: 100vh;
+    background: url('../../assets/images/inventory.jpg') no-repeat;
+    background-size: cover;
 }
-.buttonStyle{
+
+.buttonStyle {
     background-color: red;
     color: white;
+}
+
+nav {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.2);
+    justify-content: space-between;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    align-items: center;
+}
+
+nav ul li {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+}
+
+nav ul li button:hover {
+    color: red;
+    text-decoration: underline;
+    box-shadow: 2px 2px 4px rgba(158, 13, 13, 0.6)
+}
+
+.logo {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+nav ul li a :hover {
+    color: red;
+}
+
+.menuIcon {
+    display: none;
+    margin-right: 20px;
+}
+
+.closeIcon {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+}
+
+.nav-container {
+    display: none;
+}
+
+@media screen and (max-width: 695px) {
+    .menuIcon {
+        display: flex
+    }
+
+    .closeIcon {
+        display: flex;
+    }
+
+    .nav-container {
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(0, 0, 0, 0.2);
+        color: white;
+        border-top-left-radius: 20px;
+    }
+
+    .nav-container-web {
+        display: none
+    }
+
+    nav ul li {
+        display:flex;
+    }
+
+    .baseContainerhome {
+        width: 100%;
+        height: 100vh;
+        background-position:center;
+    }
 }
