--- a/src/screens/SideNavBar/style.css
+++ b/src/screens/SideNavBar/style.css
@@ -1,26 +1,13 @@
-.loginButtonContainer {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
-.loginButton {
-    background-color: #1366D9;
-    color: white;
-    padding: 10px;
+.modelInputStyle {
     border-radius: 10px;
-    margin: 10px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-.inputContainerStyle{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
+    margin-top: 10px;
     margin-bottom: 10px;
-}
-.inputStyle{
+    padding: 10px;
+    border-width: 1px;
+    width: 100%;
     border-color: #000;
+}
+.modelInputContainerStyle {
     width: 65%;
 }
 .addButtonSecContainer {
