--- a/src/screens/login/styles.module.css
+++ b/src/screens/login/styles.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 10px;
 }
 
 .loginButton {
@@ -13,18 +14,14 @@
     color: white;
     padding: 10px;
     border-radius: 10px;
-    margin: 10px;
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.inputStyle {
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-width: 1px;
+.inputSecStyle{
+    width: 90%;
+    outline: none;
 }
 
 .headingContainer {
@@ -37,12 +34,12 @@
 }
 
 .headingStyle {
-    font-size: 2rem;
+    font-size: 32px;
     color: #2B2F38;
 }
 
 .subHeadingStyle {
-    font-size: 1rem;
+    font-size: 16px;
     color: #667085;
 
 }
@@ -51,14 +48,36 @@
     width: 90%;
 }
 
-.inputContainer {
+.inputContainerStyle {
     flex-direction: column;
     display: flex;
+    width: 100%;
+}
+
+.inputContainerStyle input{
+    padding: 7px;
+}
+
+.inputStyle{
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    /* width: 100%; */
+    padding:2px;
+    border :1px solid #2B2F38;
+    border-width: 1px;
+    border-radius: 10px;
+}
+
+.inputStyle input{
+    padding: 5px;
+}
+
+.inputStyle:has(input:focus){
+    border: 2px solid rgb(203, 140, 72);
 }
 
 .loginButtonContainer {
-    display: flex;
-    justify-content: center;
     font-size: 20px;
 }
 
@@ -74,9 +93,20 @@
 .primaryContainer {
     width: 50vw;
     height: 100vh;
-    align-items: center;
-    align-content: center;
-    padding: 20px;
+}
+
+.imageContainerStyle{ 
+    width: "100%"; 
+    height: "100%" 
+}
+
+.imageStyle{
+    width:100vw;
+    height: 100vh;
+    border-radius: 10px; 
+    background-color: pink;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 550px){
@@ -91,8 +121,16 @@
     .secondaryContainer{
         width: 100vw;
         height: fit-content;
-
     }   
+
+    .headingStyle {
+        font-size: 22px;
+    }
+    
+    .subHeadingStyle {
+        font-size: 14px;
+    
+    }
 }
 
 .checkBoxStyle{
@@ -104,9 +142,8 @@
 .inputLabel{
     color: #48505E;
 }
-.imageStyle{
-    width:100%;
-    height:100%;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+.eyeIconStyle {
+    color:  #1366D9;
 }
