--- a/src/screens/profile/styles.css
+++ b/src/screens/profile/styles.css
@@ -1,5 +1,10 @@
-.baseContainer{
+.baseContainer {
     display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
 }
 
 .textContainer {
@@ -8,23 +13,13 @@
     justify-content: space-between;
 }
 
-.loginButton {
-    background-color: #1366D9;
-    color: white;
+.logoutButton {
+    background-color: red;
+    color: #fff;
     padding: 10px;
     border-radius: 10px;
     margin: 10px;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.inputStyle {
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-width: 1px;
+    width: 50vw;
 }
 
 .headingContainer {
@@ -51,12 +46,7 @@
     width: 90%;
 }
 
-.inputContainer {
-    flex-direction: column;
-    display: flex;
-}
-
-.loginButtonContainer {
+.logoutButtonContainer {
     display: flex;
     justify-content: center;
     font-size: 20px;
@@ -71,42 +61,51 @@
     align-items: center;
 }
 
-.primaryContainer {
-    width: 50vw;
-    height: 100vh;
-    align-items: center;
-    align-content: center;
-    padding: 20px;
+.profileImage {
+    width: 20vw;
+    height: 20vw;
+    border-radius: 10vw;
 }
 
-@media screen and (max-width: 550px){
-    .baseContainer{
+@media screen and (max-width: 550px) {
+    .baseContainer {
         display: flex;
-        flex-direction: column;
     }
-    .primaryContainer{
-        width: 100vw;
-        height: fit-content;
-    }
-    .secondaryContainer{
-        width: 100vw;
-        height: fit-content;
 
-    }   
+    .secondaryContainer {
+        width: 100vw;
+        height: fit-content;
+    }
+
+    .profileImage {
+        width: 30vw;
+        height: 30vw;
+        border-radius: 15vw;
+    }
+
+    .logoutButton {
+        width: 90vw;
+    }
 }
 
-.checkBoxStyle{
+.checkBoxStyle {
     margin-right: 10px;
 }
-.linkText{
+
+.linkText {
     color: #1366D9;
 }
-.inputLabel{
+
+.inputLabel {
     color: #48505E;
 }
-.imageStyle{
-    width:100%;
-    height:100%;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+.emailText {
+    font-size: 18px;
+    font-weight: bold;
+    color: #5C6F88;
+    font-family: "Roboto", sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 }
