--- a/src/screens/ShowDetailScreen/styles.module.css
+++ b/src/screens/ShowDetailScreen/styles.module.css
@@ -129,6 +129,7 @@
     border-radius: 10px;
     margin: 20px;
     text-align: left;
+    width:25vw
 }
 
 .cardContainer{
@@ -199,5 +200,8 @@
     
     .subHeading {
         font-size: 12px;
+    }
+    .dataContainer {
+        width:90vw
     }
 }
