--- a/src/components/FloatingLabelInput/style.css
+++ b/src/components/FloatingLabelInput/style.css
@@ -15,12 +15,17 @@
   
   .label {
     position: absolute;
-    top: 0px;
-    left: 10px;
     color:#888888;
-    font-size: 16px;
+    font-size: 12px;
     transition: all 0.2s ease;
     pointer-events: none;
+    z-index:auto;
+    margin-left: 15px;
+  
+  }
+  .baseInputContainer{
+    width:100%;
+    height: 100%;
   }
   
   .input:focus label,
