--- a/src/components/MultipleImagePicker/styles.module.css
+++ b/src/components/MultipleImagePicker/styles.module.css
@@ -70,6 +70,10 @@
     font-family: "Roboto", sans-serif;
 }
 
+.inputStyle{
+    width: 100%;
+}
+
 @media screen and (max-width:650px) {
 
     .secondaryContainer{
