--- a/src/screens/AssignInventoryScreen/styles.module.css
+++ b/src/screens/AssignInventoryScreen/styles.module.css
@@ -19,8 +19,9 @@
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    height: 100vh;
     align-self: center;
+    margin-top: 50px;
+    padding: 20px;
 }
 
 .separator{
@@ -119,7 +120,7 @@
 @media screen and (max-width:650px) {
 
     .secondaryContainer{
-        width: 90VW;
+        width: 70VW;
     }
 
     .saveButton{
