--- a/src/components/TableComponent/style.module.css
+++ b/src/components/TableComponent/style.module.css
@@ -74,6 +74,11 @@
     width: fit-content;
 }
 
+.emptyTableStyle {
+    margin-top: 100px;
+    justify-content: center;
+}
+
 .deleteIcon {
     color: red;
 }
